--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,10 @@
   "autoload": {
     "psr-4": { "Hmp\\AsseticBundle\\": "" }
   },
+  "minimum-stability": "stable",
   "extra": {
     "branch-alias": {
-      "dev-master": "1.0.0"
+      "dev-master": "1.0.1"
     }
   }
 }
