--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
   "minimum-stability": "stable",
   "extra": {
     "branch-alias": {
-      "dev-master": "1.0.1"
+      "dev-master": "master"
     }
   }
 }
